<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:id="@+id/frameLayout">

        <TextView
            android:id="@+id/textAction1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/notification_null_1"
            android:textSize="100sp" />

        <TextView
            android:id="@+id/textAction2"
            android:layout_marginTop="80dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/notification_null_2"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textAction3"
            android:layout_marginTop="120dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/notification_null_3"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/imageAddNewButton"
            android:layout_margin="15dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@android:drawable/ic_input_add"
            android:background="@drawable/float_add_new"
            android:contentDescription="@string/notification_null_2"
            android:layout_gravity="center|bottom" />

    </FrameLayout>



</RelativeLayout>
